# hypothesis

./: .gitignore  Conjecture.md  Float_Generation_Strategy_Guide.md  MISSING_FUNCTIONALITY.md  Python_Report.md  debug_float_encoding.py  final_verification_report.md  float_encoding_analysis.md  hypervisor.py  hypervisor.sh  simple_float_debug.py  verify_encoding.py  verify_python_parity.py
conjecture-rust/: 2.md  ARCHITECTURAL_BLUEPRINT.md  ARCHITECTURAL_SYNTHESIS_BLUEPRINT.md  CHOICE_INDEXING_CAPABILITY_ANALYSIS.md  CHOICE_SEQUENCE_IMPLEMENTATION_REPORT.md  CLAUDE.md  CONJECTURE_DATA_PYTHON_FFI_IMPLEMENTATION_SUMMARY.md  Cargo.toml  DATATREE_NOVEL_PREFIX_INTEGRATION_SUMMARY.md  DATATREE_TYPE_CONSISTENCY_IMPLEMENTATION_SUMMARY.md  DFA_IMPLEMENTATION_SUMMARY.md  DOCUMENTATION_SUMMARY.md  DevJournal.md  FLOAT_CONSTRAINT_TYPE_SYSTEM_SUMMARY.md  FLOAT_CONSTRAINT_VERIFICATION_REPORT.md  FLOAT_ENCODING_EXPORT_SUMMARY.md  IMPLEMENTATION_STATUS.md  LIFECYCLE_MANAGEMENT_IMPLEMENTATION_SUMMARY.md  MISSING_FUNCTIONALITY.md  MODULE_INTEGRATION_NOTES.md  PROVIDER_INTEGRATION_SUMMARY.md  PYTHON_PARITY_IMPLEMENTATION.md  PyO3_Feature_Gate_Implementation_Report.md  Python_Parity_Gap_Analysis.md  README.md  SHRINKING_TESTS_PORTED.md  SecondBrain.md  TEMPLATE_BASED_GENERATION_VERIFICATION_REPORT.md  TREE_STRUCTURES_ANALYSIS.md  UNIFIED_ARCHITECTURAL_BLUEPRINT.md  choice_sequence_demo.rs  conjecture_data_lifecycle_capability_demo.rs  conjecture_data_python_ffi_capability_demo  conjecture_data_python_ffi_capability_demo.rs  core_compilation_error_resolution_standalone_test.rs  database_integration_test.rs  datatree_integration_demo.rs  datatree_verification_test.rs  debug_integer_indexing.py  float_constraint_capability_demo.rs  (+72 more)
conjecture-rust-2-electric-boogaloo/: CLAUDE.md  Cargo.toml
conjecture-rust-2-electric-boogaloo/src/: lib.rs
conjecture-rust-2-electric-boogaloo/src/choice/: choice_debug.rs  constraints.rs  indexing.rs  indexing_correct.rs  mod.rs  node.rs  python_parity_tests.rs  values.rs
conjecture-rust/examples/: draw_operations_demo.rs  python_hypothesis_parity_demo.rs  subnormal_demo.rs
conjecture-rust/python_verification_env/: pyvenv.cfg
conjecture-rust/src/: buffer_operations_test.rs  choice_sequence_integration.rs  choice_sequence_management.rs  conjecture_data_lifecycle_comprehensive_capability_tests.rs  conjecture_data_lifecycle_management.rs  conjecture_data_python_ffi.rs  conjecture_data_python_ffi_advanced.rs  conjecture_data_python_ffi_comprehensive_capability_tests.rs  conjecture_data_python_ffi_integration.rs  conjecture_data_python_ffi_integration_tests.rs  conjecture_data_python_ffi_validation_tests.rs  data.rs  data_helper.rs  database.rs  datatree.rs  datatree_enhanced_navigation.rs  datatree_integration_tests.rs  datatree_integration_type_consistency_comprehensive_capability_tests.rs  datatree_node_navigation_comprehensive_capability_tests.rs  distributions.rs  engine.rs  engine_orchestrator.rs  engine_orchestrator_choice_system_shrinking_integration.rs  engine_orchestrator_choice_system_shrinking_integration_comprehensive_capability_tests.rs  engine_orchestrator_choice_system_shrinking_integration_test.rs  engine_orchestrator_choice_system_shrinking_integration_tests.rs.disabled  engine_orchestrator_conjecture_data_lifecycle_pyo3_integration_tests.rs  engine_orchestrator_datatree_novel_prefix_integration.rs  engine_orchestrator_provider_type_integration.rs  engine_orchestrator_provider_type_integration_tests.rs  engine_orchestrator_test_function_signature_alignment.rs  engine_orchestrator_test_function_signature_alignment_tests.rs  float_encoding_export.rs  float_performance_test.rs  floats.rs  ints.rs  lib.rs  persistence.rs  provider_integration_demo.rs  provider_lifecycle_management.rs  (+23 more)
conjecture-rust/src/choice/: advanced_shrinking.rs  advanced_shrinking_comprehensive_tests.rs  advanced_shrinking_tests.rs  advanced_template_generation_tests.rs  choice_debug.rs  choice_sequence_recording.rs  choice_templating_forcing_tests.rs  choice_type_system_integration_capability_tests.rs  constraints.rs  core_compilation_error_resolution.rs  core_compilation_error_resolution_comprehensive_capability_tests.rs  dfa_basic_test.rs  dfa_string_generation.rs  dfa_string_generation_capability_tests.rs  dfa_string_generation_comprehensive_tests.rs  field_access_system.rs  field_access_system_tests.rs  float_constraint_type_consistency_comprehensive_tests.rs  float_constraint_type_system.rs  float_constraint_type_system_pyo3_integration_tests.rs  float_encoding_export_ffi_comprehensive_tests.rs  float_encoding_export_integration_tests.rs  indexing.rs  indexing_correct.rs  mod.rs  navigation.rs  navigation_capability_ffi_tests.rs  navigation_capability_tests.rs  navigation_comprehensive_tests.rs  navigation_ffi_tests.rs  navigation_integration_tests.rs  navigation_system.rs  navigation_system_comprehensive_tests.rs  navigation_system_datatree_novel_prefix_pyo3_ffi_comprehensive_capability_tests.rs  node.rs  node_verification.rs  python_parity_tests.rs  shrinking_demo.rs  shrinking_system.rs  shrinking_system_float_constraint_integration_comprehensive_capability_tests.rs  (+20 more)
conjecture-rust/src/floats/: constants.rs  encoding.rs  mod.rs  tests.rs
conjecture-rust/tests/: api_modernization_test.rs  choice_indexing_port_test.rs  choice_indexing_tests.rs  choice_sequence_management_test.rs  conjecture_data_draw_operations_test.rs  core_compilation_error_resolution_test.rs  core_shrinking_tests_ported.rs  datatree_tests.rs  draw_operations_test.rs  engine_test.rs  shrinking_system_test.rs  shrinking_tests_core.rs  simple_shrinking_test.rs  trait_object_compatibility_resolution.rs  trait_object_compatibility_tests.rs  tree_structures_tests.rs
conjecture-rust/verification-tests/: Cargo.toml  verify_python.py
hypothesis-ruby/: CLAUDE.md  (+1 more)
hypothesis-swift/: CLAUDE.md  Cargo.toml  Makefile  build.sh  cbindgen.toml
hypothesis-swift/.build/: build.db  debug.yaml  workspace-state.json
hypothesis-swift/include/: conjecture.h  module.modulemap
hypothesis-swift/src/: lib.rs
(+389 files in other folders)
