[package]
name = "conjecture-rust-2"
version = "0.1.0"
edition = "2021"
description = "Modern Rust port of Python Hypothesis's conjecture engine"
license = "MPL-2.0"

[lib]
name = "conjecture"

[dependencies]
# Pure Rust crypto to avoid OpenSSL dependencies (key insight from swift-hypothesis)
sha1 = "0.10"
# Other core dependencies
rand = "0.8"
byteorder = "1.4"

[dev-dependencies]
# For property-based testing of our implementation
proptest = "1.0"
# For benchmarking
criterion = "0.5"

# Benchmarks will be added later
# [[bench]]
# name = "choice_performance"
# harness = false