[package]
name = "conjecture-rust"
version = "2.0.0"
edition = "2021"
description = "Modern Rust port of Python Hypothesis's conjecture engine with perfect parity"
license = "MPL-2.0"
authors = ["Hypothesis Development Team"]
homepage = "https://hypothesis.works/"
repository = "https://github.com/HypothesisWorks/hypothesis"
keywords = ["testing", "property-based", "hypothesis", "conjecture", "fuzzing"]
categories = ["development-tools::testing"]

[lib]
name = "conjecture"


[dependencies]
# Crypto dependencies for database hashing
# sha1 = "0.10"  # TODO: Not used yet
sha2 = "0.10"
# Logging support
log = "0.4"
# Other core dependencies
rand = "0.8"
rand_chacha = "0.3"
byteorder = "1.4"
lazy_static = "1.4"
once_cell = "1.19"
# TODO: f16 support not implemented yet
# half = "2.4"
# Database persistence dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
thiserror = "1.0"
tempfile = "3.0"
regex = "1.11.1"

[dev-dependencies]
# For property-based testing of our implementation
proptest = "1.0"
# For benchmarking
criterion = "0.5"
# tempfile already in main dependencies


# Benchmarks will be added later
# [[bench]]
# name = "choice_performance"
# harness = false